name:               xmonad-web
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable xmonad-web
  main-is:          xmonad-web.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
